--- a/MyServerFramework/CMakeLists.txt
+++ b/MyServerFramework/CMakeLists.txt
@@ -51,6 +51,8 @@ INCLUDE_DIRECTORIES(
 .;
 Game;
 Game/Character;
+Game/Character/Component;
+Game/Character/Component/StateMachine;
 Game/Common;
 Game/Component;
 Game/Config;
@@ -77,6 +79,7 @@ Game/Utility;
 ../MyServerFramework_Frame/Frame/CommandSystem;
 ../MyServerFramework_Frame/Frame/CommandSystem/CmdCharacterManager;
 ../MyServerFramework_Frame/Frame/CommandSystem/CmdGlobal;
+../MyServerFramework_Frame/Frame/CommandSystem/CmdHttp;
 ../MyServerFramework_Frame/Frame/CommandSystem/CmdMySQLManager;
 ../MyServerFramework_Frame/Frame/CommandSystem/CmdNetServer;
 ../MyServerFramework_Frame/Frame/Common;
@@ -112,6 +115,7 @@ Game/Utility;
 ../MyServerFramework_Frame/Frame/StateManager;
 ../MyServerFramework_Frame/Frame/STL;
 ../MyServerFramework_Frame/Frame/Thread;
+../MyServerFramework_Frame/Frame/Ticker;
 ../MyServerFramework_Frame/Frame/TimePointSystem;
 ../MyServerFramework_Frame/Frame/TimePointSystem/TimePoint;
 ../MyServerFramework_Frame/Frame/TimeTaskSystem;
