--- a/MyServerFramework_Frame/CMakeLists.txt
+++ b/MyServerFramework_Frame/CMakeLists.txt
@@ -63,6 +63,7 @@ Frame/ClassPool/VectorPool;
 Frame/CommandSystem;
 Frame/CommandSystem/CmdCharacterManager;
 Frame/CommandSystem/CmdGlobal;
+Frame/CommandSystem/CmdHttp;
 Frame/CommandSystem/CmdMySQLManager;
 Frame/CommandSystem/CmdNetServer;
 Frame/Common;
@@ -98,6 +99,7 @@ Frame/ServerFramework;
 Frame/StateManager;
 Frame/STL;
 Frame/Thread;
+Frame/Ticker;
 Frame/TimePointSystem;
 Frame/TimePointSystem/TimePoint;
 Frame/TimeTaskSystem;
